@@ -19,6 +19,12 @@ Wed Sep 10 23:00:43 2008  Yusuke Endoh  <mame@tsg.ne.jp>
 	* tool/compile_prelude.rb: print "<internal:prelude>" instead of
 	  "prelude.rb" on stack trace.  [ruby-dev:36129]
 
+Wed Sep 10 21:19:58 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* bignum.c (big2str_karatsuba): remove unnecessary fixnum code.  a
+	  patch from TOYOFUKU Chikanobu <nobu_toyofuku at nifty.com> in
+	  [ruby-dev:36217].
+
 Wed Sep 10 21:09:32 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
 
 	* test/win32ole/test_err_in_callback.rb: InternetExplorer should
